# api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt
FastAPI/: main.py  pyproject.toml  users.py
FastAPI/db/: client.py
FastAPI/db/models/: user.py
FastAPI/db/schemas/: user.py
FastAPI/routers/: basic_auth_users.py  jwt_auth_users.py  products.py  users.py  users_db.py
